# bibsh_lm_korvedae

./: .gitignore  LICENSE.md  README.md  client.py  main.py  pyproject.toml  requirements.txt
commands/: SPCommand.py  init_workspaces.py  movetoworkspace.py  movetoworkspacesilent.py  workspace.py
src/bibsh_lm_korvedae/: bibsh_lm.py  bibsh_lm_client.py  settings.py  state.py
src/bibsh_lm_korvedae/commands/: init_workspaces.py  layout.py  movetolayoutsilent.py
src/bibsh_lm_korvedae/components/: config.py  state.py
src/bibsh_lm_korvedae/template/: spconfig.json
src/bibsh_wm_korvedae/: bibsh_client.py  bibsh_wm.py
src/bibsh_wm_korvedae/commands/: init_workspaces.py  movetoworkspacesilent.py  workspace.py
src/commands/: movetoworkspacesilent.py
template/: spconfig.json
