[project]
name = "bibsh_wm_korvedae"
version = "0.0.1"
authors = [
{ name="Korvedae", email = "korvedae@proton.me"}
]
description = "A small script program for hyprland that emulates a single workspace across multiple monitors."
readme = "README.md"
requires-python = ">=3.13"
classifiers = [
	"Programming Language :: Python :: 3",	
	"Operating System :: Linux"
]

[project.urls]
Homepage = "https://github.com/korvedae/bibsh_workspace_manager"
Issues = "https://github.com/korvedae/bibsh_workspace_manager/issues"

[build-system]
requires = ["hatchling >= 1.27"]
build-backend = "hatchling.build"
