[project]
name = "bibsh_wm_korvedae"
version = "0.0.2"
authors = [{ name = "Korvedae", email = "korvedae@proton.me" }]
description = "A small script program for hyprland that emulates a single workspace across multiple monitors."
readme = "README.md"
requires-python = ">=3.13"
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/korvedae/bibsh_workspace_manager"
Issues = "https://github.com/korvedae/bibsh_workspace_manager/issues"

[project.scripts]
bibsh_wm = "bibsh_wm_korvedae.bibsh_wm:main"
bibsh_client = "bibsh_wm_korvedae.bibsh_client:main"

[build-system]
requires = ["hatchling >= 1.27"]
build-backend = "hatchling.build"
