[project]
name = "bibsh_lm_korvedae"
version = "0.2.5"
authors = [{ name = "Korvedae", email = "korvedae@proton.me" }]
description = "A small script program for hyprland that emulates a single layout (or desktop) across multiple monitors using multiple workspaces."
readme = "README.md"
requires-python = ">=3.13"
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/korvedae/bibsh_lm_korvedae"
Issues = "https://github.com/korvedae/bibsh_lm_korvedae/issues"

[project.scripts]
bibsh_lm = "bibsh_lm_korvedae.bibsh_lm:main"
bibsh_lm_client = "bibsh_lm_korvedae.bibsh_lm_client:main"

[build-system]
requires = ["hatchling >= 1.27"]
build-backend = "hatchling.build"
